# Asteroid-GameEngine

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Shader/: GeometryShader.gs  ModelShader.fs  ModelShader.vs  ModelShader_ins.fs  ModelShader_ins.vs  SimpleDrawShader.fs  SimpleDrawShader.vs  SimpleTextureShader_Instancing.vs  StandardFragmentShader.fs  StandardVertexShader.vs  point_shadows_depth.gs  shadow_depth_DirLight.vs  shadow_depth_PoLight.fs  shadow_depth_PoLight.vs
lib/glfw/include/glad/: glad.h
lib/glm/: CMakeLists.txt
src/: AGE_Assert.hpp  ConsoleGame.cpp  ConsoleGame.h  IUpdateable.h  InterfaceIds.h  Main.cpp  RuntimeObject01.cpp  glad.c  imgui.ini
src/ExampleModel/: Cube.fbx  Sphere.fbx  Torus.fbx  left_shimmy.fbx
src/ExampleModel/Nendoroid-Rin/: Nendoroid-Rin-old.mb  Nendoroid-Rin.mb
src/ExampleModel/Nendoroid-Rin/.mayaSwatches/: Base_Color2.png_hcm.swatch  Nendoroid-Rin.mb.swatches  initialShadingGroup_Mixed_AO.png_hcm.swatch
src/ExampleProject/: Rolling Friction.AstGamEng  Scene1.AstGamEng  Scene2.AstGamEng  Simple01.AstGamEng
src/GraphicEngine/: GLDebugDrawer.hpp  imgui_Custom.hpp
src/RuntimeCompiler/: Compiler_PlatformPosix.cpp  Compiler_PlatformWindows.cpp  FileChangeNotifier.h  FileWatcher.h  RuntimeCompiler_VS2010.vcxproj
src/RuntimeObjectSystem/: IObject.h  ObjectFactorySystem.cpp  ObjectFactorySystem.h  RuntimeObjectSystem.cpp  RuntimeObjectSystem.vcxproj  RuntimeObjectSystem_PlatformPosix.cpp  SimpleSerializer.cpp  SimpleSerializer.h  SystemTable.h
src/System/: AGE_EngineCore.cpp  AGE_EngineCore.hpp  AudioSystem.cpp  AudioSystem.hpp  GraphicSystem.cpp  GraphicSystem.hpp  ISystem.hpp  InputSystem.cpp  InputSystem.hpp  ScriptEventSystem.cpp  ScriptEventSystem.hpp  TimeSystem.cpp  TimeSystem.hpp  UISystem.cpp  UISystem.hpp  World.cpp  World.hpp
src/System/ISystem/: ISystem.hpp
src/Texture/: GlobalSettings.xml
